--- a/1-main/index.html
+++ b/1-main/index.html
@@ -57,7 +57,7 @@
                 <a href="#" class="off-header-link"><i class="fa-solid fa-question"></i></a>
                 <a href="../11.1-login/index.html" class="off-header-login"><i class="fa-solid fa-arrow-right"></i><span>Giriş</span></a>
                 <button class="btn-close" data-bs-dismiss="offcanvas"></button>
-            </div>
+            </div><!--salam-->>
             <div class="offcanvas-body">
                 <div class="offcanvas-category d-flex flex-column w-100">
                     <div class="d-flex align-items-center justify-content-between p-3 border-bottom">
@@ -466,7 +466,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -490,7 +490,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -514,7 +514,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -538,7 +538,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -562,7 +562,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -586,7 +586,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -610,7 +610,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -634,7 +634,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -658,7 +658,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -682,7 +682,7 @@
                                     <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
                                     <div class="d-flex justify-content-between w-100 py-3">
                                         <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
-                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                        <div class="favorite-btn"><i class="disslike fa-regular fa-heart"></i><i class="like fa-solid fa-heart d-none"></i></div>
                                     </div>
                                 </div>
                             </div>
@@ -842,14 +842,14 @@
             <div class="container">
                 <div class="swiper main-swiper-6 w-100">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                        <div class="swiper-slide ">
                             <div class="partner-image"><img src="../image/1-main/partners/img-1.png"></div>
                         </div>
                         <div class="swiper-slide">
                             <div class="partner-image"><img src="../image/1-main/partners/img-2.png"></div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="partner-image"><img src="../image/1-main/partners/img-1.png"></div>
+                            <div class="partner-image"><img src="../image/1-main/partners/img-3.png"></div>
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
@@ -953,16 +953,16 @@
                 <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-regular fa-heart"></i>
-                        <span class="secilen-counter card-counter">0</span> 
+                        <span class="favorite-counter card-counter">0</span> 
                     </div>
                     <a href="../9-secilmisler/index.html" class="card-label">Seçilmişlər</a>
                 </div>
             </div>
-            <div class="card-secilen card-item">
+            <div class="card-muqayise card-item">
                 <div class="d-flex align-items-center">
                     <div class="position-relative card-icon">
                         <i class="fa-solid fa-scale-balanced"></i>
-                        <span class="secilen-counter card-counter">0</span> 
+                        <span class="muqayise-counter card-counter">0</span> 
                     </div>
                     <a href="../8-muqayise/index.html" class="card-label">Müqayisələr</a>
                 </div>
