--- a/11.2-register/index.html
+++ b/11.2-register/index.html
@@ -411,8 +411,8 @@
                                 <input type="password" class="form-control" placeholder="Şifrənizi təsdiq edin *" id="user-pwd-2" required>
                             </div>
                             <div class="col-12 d-flex justify-content-between justify-content-lg-start my-4">
-                                <button type="submit" class="form-red-btn">Göndər</button>
-                                <button type="submit" class="form-white-btn d-lg-none"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                                <button type="submit" class="form-red-btn">Qeydiyyat</button>
+                                <button type="button" class="form-white-btn d-lg-none"><a href="../11.1-login/index.html">Giriş</a></button>
                             </div>
                         </div>
                     </form>
@@ -425,7 +425,7 @@
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
                             <a href="#"><i class="fa-brands fa-youtube"></i></a>
                         </div>
-                        <button type="submit" class="form-white-btn mt-5"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                        <button type="button" class="form-white-btn mt-5"><a href="../11.1-login/index.html">Giriş</a></button>
                     </div>
                 </div>
             </div>
