--- a/11.3-forget-pwd/index.html
+++ b/11.3-forget-pwd/index.html
@@ -391,7 +391,7 @@
                         <input type="email" class="form-control my-4" id="user-email" placeholder="E-poçt *" required>
                         <div class="w-100 d-flex justify-content-between justify-content-md-start my-4">
                             <button type="submit" class="form-red-btn">Göndər</button>
-                            <button type="submit" class="form-white-btn d-md-none"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                            <button type="button" class="form-white-btn d-md-none"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
                         </div>
                     </form>
                 </div>
@@ -403,7 +403,7 @@
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
                             <a href="#"><i class="fa-brands fa-youtube"></i></a>
                         </div>
-                        <button type="submit" class="form-white-btn mt-5"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
+                        <button type="button" class="form-white-btn mt-5"><a href="../11.2-register/index.html">Qeydiyyat</a></button>
                     </div>
                 </div>
             </div>
