--- a/12-mehsullar/index.html
+++ b/12-mehsullar/index.html
@@ -833,7 +833,7 @@
                             </div>
                         </div>
                         <div class="products-wrapper row w-100 p-3">
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -859,7 +859,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -885,7 +885,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -911,7 +911,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -937,7 +937,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -963,7 +963,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -989,7 +989,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -1015,7 +1015,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -1041,7 +1041,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -1067,7 +1067,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -1093,7 +1093,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
@@ -1119,7 +1119,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-item col-6 col-xl-4">
+                            <div class="product-item col-12 col-md-6 col-xl-4">
                                 <div class="sobsan-product-card">
                                     <div class="spc-header">
                                         <span class="badge">TƏKLİF OLUNAN</span>
