create panel structure

--- a/index.html
+++ b/index.html
@@ -255,6 +255,28 @@
                     </div>
                 </div>
             </div>
+            <div class="bottom-navbar">
+                <div class="container border">
+                    <div class="bottom-navbar-links border">
+                        <a href="#" class="logo"><img src="image/logo/sobsan-logo.svg"></a>
+                        <button class="alt-category-panel-button border"><a href="#" class="bottom-nav-link">Məhsullar</a></button>
+                        <button class="alt-category-panel-button border"><a href="#" class="bottom-nav-link">Dekorativ Boyalar</a></button>
+                        <button class="alt-category-panel-button border"><a href="#" class="bottom-nav-link">Sənaye Boyaları</a></button>
+                        <button class="alt-category-panel-button border"><a href="#" class="bottom-nav-link">İnşaat Məhsulları</a></button>
+                        <button class="alt-category-panel-button border"><a href="#" class="bottom-nav-link">Boyaçı Alətləri</a></button>
+                        <a href="#" class="bottom-nav-link">Digər</a>
+                        <a href="#" class="usta-logo"><img src="image/logo/usta_logo.png"></a>
+                    </div>
+                    <div class="alt-category-panel d-none">
+                        <div class="alt-category-panel-menu">PANEL 1</div>
+                        <div class="alt-category-panel-menu">PANEL 2</div>
+                        <div class="alt-category-panel-menu">PANEL 3</div>
+                        <div class="alt-category-panel-menu">PANEL 4</div>
+                        <div class="alt-category-panel-menu">PANEL 5</div>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     </header>
 
