add toolbar cards

--- a/index.html
+++ b/index.html
@@ -500,7 +500,39 @@
 
 
 
-    <button class="page-up-scroll-btn d-none"><i class="fa-solid fa-arrow-up"></i></button>
+    
+    <div class="page-toolbar-center">
+        <a href="#" class="general-qaynar-xett d-none d-md-flex">
+            <i class="fa-solid fa-phone"></i>
+            <span>*4545<br>Qaynar xətt</span>
+        </a>
+        <button class="toolbar-card">
+            <div class="icon">
+                <img src="image/icons/sebet-black.png">
+                <span class="card-badge">0</span>
+            </div>
+            <a href="#">Səbət</a>
+        </button>
+        <button class="toolbar-card">
+            <div class="icon">
+                <img src="image/icons/heart-black.png">
+                <span class="card-badge">0</span>
+            </div>
+            <a href="#">Seçilmişlər</a>
+        </button>
+        <button class="toolbar-card">
+            <div class="icon">
+                <img src="image/icons/compare-black.png">
+                <span class="card-badge">0</span>
+            </div>
+            <a href="#">Müqayisələr</a>
+        </button>
+    </div>
+    <div class="page-toolbar-bottom">
+        <button class="page-up-scroll-btn d-none"><i class="fa-solid fa-arrow-up"></i></button>
+        <a href="#" class="mobile-qaynar-xett d-md-none"><span>*4545</span></a>
+    </div>
+
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
