--- a/index.html
+++ b/index.html
@@ -487,17 +487,80 @@
         </div>
     </header>
 
-    <main>
-        <div class="large-div d-flex justify-content-center align-items-center fs-1 text-white">SALAM</div>
-        <div class="large-div"></div>
-        <div class="large-div"></div>
-        <div class="large-div"></div>
-        <div class="large-div"></div>
-        <div class="large-div"></div>
-        <div class="large-div"></div>
-    </main>
+    
 
 
+    <footer>
+        <div class="container">
+            <div class="footer-top row">
+                <div class="col-12 col-xl-3">
+                    <div class="left">
+                        <a href="#" class="logo"><img src="image/logo/sobsan-logo.svg"></a>
+                        <div class="sosial-icons">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-xl-9">
+                    <div class="right">
+                        <div class="row w-100">
+                            <div class="col-12 col-md-6 col-lg-3">
+                                <div class="footer-links">
+                                    <span>Menyular</span>
+                                    <a href="#">Haqqımızda</a>
+                                    <a href="#">Kataloqlar</a>
+                                    <a href="#">Aksiyalar</a>
+                                    <a href="#">Xəbərlər</a>
+                                    <a href="#">Qalereya</a>
+                                    <a href="#">Ödəniş və çatdırılma</a>
+                                    <a href="#">Zəmanət şərtləri</a>
+                                    <a href="#">Bizimlə əlaqə</a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3">
+                                <div class="footer-links">
+                                    <span>Kateqoriyalar</span>
+                                    <a href="#">Məhsullar</a>
+                                    <a href="#">Dekorativ boyalar</a>
+                                    <a href="#">Sənaye boyaları</a>
+                                    <a href="#">İnşaat məhsulları</a>
+                                    <a href="#">Boyaçı alətləri</a>
+                                    <a href="#">Digər</a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3">
+                                <div class="footer-links">
+                                    <span>Ünvanlarımız</span>
+                                    <a href="#">Baş ofis</a>
+                                    <a href="#">Fabrik ünvanı</a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3">
+                                <div class="footer-links">
+                                    <span>Faydalı linklər</span>
+                                    <a href="#">Tez-tez soruşulanlar</a>
+                                    <a href="#">Karyera</a>
+                                    <a href="#">Xidmət şəbəkəsi</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom border-top">
+                <div class="left">
+                    <span>Bütün hüquqlar qorunur</span>
+                    <span>Hazırladı <a href="#">Pasha</a></span>
+                </div>
+                <div class="right">
+                    <span><a href="#">(+994 12) 404 45 45</a> / <a href="#">*4545</a></span>
+                    <a href="#">sobsan@sobsan.com</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     
